utilities/Sol/modules/grammars/language/src/test/resources/cocos/valid/UniqueOption.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package valid

language UniqueOption {
    template someTemplate {
        path "SomePath"
        label "Some Label"

        option someOption: String {
            label "Some Option"
        }
    }
}
